--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 			}
 
 			.login-main {
-				width:23%;
+				width:24%;
 				margin: 120px auto;
 				border: 1px solid #ddd;
 				min-height: 100px;
@@ -26,7 +26,7 @@
 			}
 
 			button {
-				padding: 10px 30px;
+				padding: 10px 20px;
 				background: blue;
 				color: white;
 				border: none;
@@ -42,13 +42,13 @@
 
 		<script type="text/javascript">
 			function driverLogin () {
-				window.location = 'driver/';
+				window.location = 'driver/index.html';
 
 				return false
 			}
 
 			function passengerLogin () {
-				window.location = 'passenger/';
+				window.location = 'passenger/index.html';
 
 				return false
 			}
@@ -68,7 +68,7 @@
 
 				<div class="bottom-line"></div>
 
-				<span>Don't have an account yet? <a href="signup.html">Signup</a></span>
+				<span>Don't have an account yet? <a href="signup.html">Signup</a> or <a href="index.html">Go back</a></a></span>
 			</form>
 		</div>
 	</body>
