--- a/signup.html
+++ b/signup.html
@@ -37,12 +37,17 @@
 			}
 
 			button {
-				padding: 10px 30px;
+				padding: 10px 20px;
 				background: blue;
 				color: white;
 				border: none;
 				font-size: 15px;
 				cursor: pointer;
+			}
+
+			div.bottom-line {
+				border-bottom: 1px solid #ddd;
+				margin: 15px 0;
 			}
 		</style>
 	</head>
@@ -66,8 +71,8 @@
 				<input type="password" name="password" required placeholder="Password">
 
 				<button type="submit" name="register">Register</button>
-
-				<span>Already registered? <a href="login.html">Login</a></span>
+				<div class="bottom-line"></div>
+				<span>Already registered? <a href="login.html">Login</a> or <a href="index.html">Go back home</a></span>
 			</form>
 		</div>
 	</body>
