--- a/UI/driver/index.html
+++ b/UI/driver/index.html
@@ -36,6 +36,10 @@
 				padding: 15px;
 			}
 
+			.logo-title {
+				
+			}
+
 			span.sub-title {
 				font-size: 20px;
 				font-weight: bold;
@@ -117,6 +121,7 @@
 	<body>
 		<div class="main">
 			<div class="sidebar">
+				<h3 class="logo-title">Ride-My-Way</h3>
 				<span class="sub-title">Menu</span>
 				<ul class="menu">
 					<li><a href="index.html">Home</a></li>
