--- a/UI/index.html
+++ b/UI/index.html
@@ -5,7 +5,7 @@
 
 		<style>
 			body {
-				background: url('images/taxi2.jpg') #eee;
+				background: url('images/taxi2.jpg') no-repeat left top, linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,0.3));
 			}
 
             .clear {
@@ -40,6 +40,10 @@
                 padding: 0;
                 margin: 0;
                 list-style: none;
+            }
+
+            .header .navigation ul li.right{
+                text-align: right;
             }
 
             .header .navigation ul a{
@@ -112,8 +116,8 @@
                         <li><a href="./">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="signup.html">Register</a></li>
+                        <li class="right"><a href="login.html">Login</a></li>
+                        <li class="right"><a href="signup.html">Register</a></li>
                     </ul>
                 </div>
             </div>
