--- a/UI/passenger/notifications.html
+++ b/UI/passenger/notifications.html
@@ -163,6 +163,7 @@
 	<body>
 		<div class="main">
 			<div class="sidebar">
+				<h3 class="logo-title">Ride-My-Way</h3>
 				<span class="sub-title">Menu</span>
 				<ul class="menu">
 					<li><a href="index.html">Home</a></li>
