Update includes site responsiveness

--- a/UI/driver/view-requests.html
+++ b/UI/driver/view-requests.html
@@ -139,6 +139,21 @@
 			th, td {
 			    padding: 15px;
 			}
+
+			@media only screen and (max-width: 1100px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+			}
 		</style>
 
 		<script type="text/javascript">
