--- a/UI/passenger/index.html
+++ b/UI/passenger/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ride My Way - Passenger - Home</title>
+		<title>Ride My Way - Home</title>
 
 		<style>
 
