--- a/UI/passenger/notifications.html
+++ b/UI/passenger/notifications.html
@@ -151,6 +151,21 @@
 
 			.red {
 				color: red;
+			}			
+
+			@media only screen and (max-width: 1100px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
 			}
 		</style>
 
