--- a/UI/passenger/ride-offer-details.html
+++ b/UI/passenger/ride-offer-details.html
@@ -125,6 +125,33 @@
 			div.detail-row {
 				padding: 15px 0;
 				border-bottom: 1px solid #ddd;
+			}	
+
+			@media only screen and (max-width: 1100px) {
+				.sidebar {
+					width: 25%;
+				}
+
+				.rightside-content {
+					width: 65%;
+				}
+			}
+
+
+
+			@media only screen and (max-width: 880px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
 			}
 		</style>
 
