--- a/UI/signup.html
+++ b/UI/signup.html
@@ -49,6 +49,109 @@
 				border-bottom: 1px solid #ddd;
 				margin: 15px 0;
 			}
+
+			
+
+			@media only screen and (max-width: 1350px) {
+				.signup-main {
+					width: 28%;
+				}
+
+				.sidebar {
+					width: 25%;
+				}
+
+				.rightside-content {
+					width: 65%;
+				}
+			}
+
+			
+
+			@media only screen and (max-width: 1150px) {
+				.signup-main {
+					width: 40%;
+				}
+
+				.sidebar {
+					width: 25%;
+				}
+
+				.rightside-content {
+					width: 65%;
+				}
+			}
+
+			
+
+			@media only screen and (max-width: 880px){
+				.signup-main {
+					width: 50%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+			}
+
+			@media only screen and (max-width: 680px){
+				.signup-main {
+					width: 67.5%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+			}
+
+			@media only screen and (max-width: 480px){
+				.signup-main {
+					width: 83%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+			}
+
+			@media only screen and (max-width: 400px){
+				.signup-main {
+					width: 90%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+
+				button {
+					padding: 8px 15px;
+					background: blue;
+					color: white;
+					border: none;
+					font-size: 15px;
+					cursor: pointer;
+				}
+			}
 		</style>
 	</head>
 	<body>
