--- a/UI/index.html
+++ b/UI/index.html
@@ -102,6 +102,46 @@
                 display: block;
                 text-shadow: 1px 0px #333;
             }
+
+            @media only screen and (max-width: 820px){
+                .main {
+                    width: 98%;
+                }
+
+                .header .logo {
+                    width: 95%;
+                }
+
+                .header .navigation {
+                    width: 97%;
+                }
+            }
+
+            
+
+            @media only screen and (max-width: 600px){
+                .main {
+                    width: 98%;
+                }
+
+                .header .navigation ul a{
+                    padding: 10px 10px;
+                    font-size: 12px;
+                }
+
+            }
+
+            @media only screen and (max-width: 400px){
+                .main {
+                    width: 98%;
+                }
+
+                .header .navigation ul a{
+                    padding: 10px 7px;
+                    font-size: 11px;
+                }
+
+            }
 		</style>
 
 	</head>
