--- a/UI/passenger/friends.html
+++ b/UI/passenger/friends.html
@@ -143,6 +143,21 @@
 			td img {
 				width: 60px;
 				height: auto;
+			}			
+
+			@media only screen and (max-width: 1100px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
 			}
 		</style>
 
