--- a/UI/passenger/request-to-join.html
+++ b/UI/passenger/request-to-join.html
@@ -116,6 +116,34 @@
 				font-size: 15px;
 				cursor: pointer;
 			}
+			
+
+			@media only screen and (max-width: 1100px) {
+				.sidebar {
+					width: 25%;
+				}
+
+				.rightside-content {
+					width: 65%;
+				}
+			}
+
+			
+
+			@media only screen and (max-width: 880px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
+			}
 		</style>
 
 		<script type="text/javascript">
