--- a/UI/driver/index.html
+++ b/UI/driver/index.html
@@ -37,7 +37,7 @@
 			}
 
 			.logo-title {
-				
+
 			}
 
 			span.sub-title {
@@ -115,6 +115,33 @@
 				border: none;
 				font-size: 15px;
 				cursor: pointer;
+			}
+
+			@media only screen and (max-width: 1100px) {
+				.sidebar {
+					width: 25%;
+				}
+
+				.rightside-content {
+					width: 65%;
+				}
+			}
+
+
+
+			@media only screen and (max-width: 880px){
+				.main {
+					width: 96%;
+				}
+
+				.sidebar {
+					width: 94%;
+				}
+
+				.rightside-content {
+					width: 94%;
+					border: none;
+				}
 			}
 		</style>
 	</head>
