--- a/UI/passenger/view-ride-offers.html
+++ b/UI/passenger/view-ride-offers.html
@@ -15,6 +15,10 @@
 				margin: 0;
 			}
 
+			.clear {
+				clear: both;
+			}
+
 			.main {
 				width:75%;
 				margin: 0px auto;
@@ -237,6 +241,7 @@
 				  </tr>
 				</table>
 			</div>
+			<div class="clear"></div>
 		</div>
 	</body>
 </html> 
