--- a/UI/driver/index.html
+++ b/UI/driver/index.html
@@ -15,6 +15,10 @@
 				margin: 0;
 			}
 
+			.clear {
+				clear: both;
+			}
+
 			.main {
 				width:75%;
 				margin: 0px auto;
@@ -81,7 +85,7 @@
 			.rightside-content {
 				float: right;
 				padding: 10px;
-				width: 75%;
+				width: 73%;
 			}
 
 			h3 {
@@ -93,6 +97,25 @@
 				text-transform: uppercase;
 				font-size: 30px;
 				font-weight: bold;
+			}
+
+			.dash-summary {
+				background: url('../images/taxi1.jpg');
+				padding: 10px;
+				color: white;
+				text-shadow: 0px 0px 2px black;
+				font-weight: bold;
+
+			}
+
+			.offers-added {
+				float: left;
+				width: 45%;
+			}			
+
+			.requests-received {
+				float: right;
+				width: 45%;
 			}
 
 			input {
@@ -115,6 +138,20 @@
 				border: none;
 				font-size: 15px;
 				cursor: pointer;
+			}
+
+			table, td, th {    
+				border: 1px solid #ddd;
+				text-align: left;
+			}
+
+			table {
+				border-collapse: collapse;
+				width: 100%;
+			}
+
+			th, td {
+				padding: 15px;
 			}
 
 			@media only screen and (max-width: 1100px) {
@@ -163,6 +200,52 @@
 			</div>
 			<div class="rightside-content">
 				<h3 class="heading">Welcome to Ride My Way Driver Dashboard</h3>
+				<div class="dash-summary">
+					<div class="offers-added">
+						<h3>Your offers</h3>
+						<table>
+							<tr>
+								<th>Offer title</th>
+								<th>Time of departure</th>
+							</tr>
+							<tr>
+								<td>City</td>
+								<td>8:00 AM</td>
+							</tr>
+							<tr>
+								<td>Upcountry ride</td>
+								<td>11:10 AM</td>
+							</tr>
+						</table>
+					</div>
+
+					<div class="requests-received">
+						<h3>Requests received</h3>
+						<table>
+						<tr>
+							<th>Passenger</th>
+							<th>Sent at</th>
+						</tr>
+						<tr>
+							<td>Simon Peter</td>
+							<td>11:00 AM</td>
+						</tr>
+						<tr>
+							<td>Julius Kasozi</td>
+							<td>11:10 AM</td>
+						</tr>
+						<tr>
+							<td>Micheal Kaggwa</td>
+							<td>11:12 AM</td>
+						</tr>
+						<tr>
+							<td>Joseph Kigozi</td>
+							<td>11:20 AM</td>
+						</tr>
+						</table>
+					</div>
+					<div class="clear"></div>
+				</div>
 			</div>
 		</div>
 	</body>
