--- a/UI/passenger/index.html
+++ b/UI/passenger/index.html
@@ -83,7 +83,7 @@
 			.rightside-content {
 				float: right;
 				padding: 10px;
-				width: 75%;
+				width: 73%;
 			}
 
 			h3 {
@@ -95,6 +95,25 @@
 				text-transform: uppercase;
 				font-size: 30px;
 				font-weight: bold;
+			}
+
+			.dash-summary {
+				background: url('../images/taxi2.jpg');
+				padding: 10px;
+				color: white;
+				text-shadow: 0px 0px 2px black;
+				font-weight: bold;
+
+			}
+
+			.offers-added {
+				float: left;
+				width: 45%;
+			}			
+
+			.requests-received {
+				float: right;
+				width: 45%;
 			}
 
 			input {
@@ -117,6 +136,20 @@
 				border: none;
 				font-size: 15px;
 				cursor: pointer;
+			}
+
+			table, td, th {    
+				border: 1px solid #ddd;
+				text-align: left;
+			}
+
+			table {
+				border-collapse: collapse;
+				width: 100%;
+			}
+
+			th, td {
+				padding: 15px;
 			}
 
 			
@@ -169,6 +202,44 @@
 			</div>
 			<div class="rightside-content">
 				<h3 class="heading">Welcome to Ride My Way Passenger Dashboard</h3>
+				<div class="dash-summary">
+					<div class="offers-added">
+						<h3>Your requests</h3>
+						<table>
+							<tr>
+								<th>Ride offer</th>
+								<th>Destination</th>
+							</tr>
+							<tr>
+								<td>City Tour</td>
+								<td>Ntinda</td>
+							</tr>
+							<tr>
+								<td>Upcountry ride</td>
+								<td>Gulu</td>
+							</tr>
+						</table>
+					</div>
+
+					<div class="requests-received">
+						<h3>Notifications</h3>
+						<table>
+							<tr>
+								<th>Request</th>
+								<th>Status</th>
+							</tr>
+							<tr>
+								<td>Request for City Tour</td>
+								<td class="green">Accepted</td>
+							</tr>
+							<tr>
+								<td>Request for Upcountry drive</td>
+								<td class="red">Rejected</td>
+							</tr>
+						</table>
+					</div>
+					<div class="clear"></div>
+				</div>
 			</div>
 			<div class="clear"></div>
 		</div>
