Seperating html and css

--- a/UI/passenger/ride-offer-details.html
+++ b/UI/passenger/ride-offer-details.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Ride My Way - Passenger - View Ride Offers</title>
 
+		<link rel="stylesheet" href="../css/style.css">
+
 		<style>
 
 			/*
@@ -161,7 +163,7 @@
 			}
 		</script>
 	</head>
-	<body>
+	<body class="inner-pages">
 		<div class="main">
 			<div class="sidebar">
 				<h3 class="logo-title">Ride-My-Way</h3>
