--- a/UI/driver/index.html
+++ b/UI/driver/index.html
@@ -3,186 +3,9 @@
 	<head>
 		<title>Ride My Way - Driver - Home</title>
 
-		<style>
-
-			/*
-			  General styles
-			*/
-
-			body {
-				background: #eee;
-				padding: 0;
-				margin: 0;
-			}
-
-			.clear {
-				clear: both;
-			}
-
-			.main {
-				width:75%;
-				margin: 0px auto;
-				border: 1px solid #ddd;
-				min-height: 500px;
-				border-radius: 2px;
-				background: #fff;
-			}
-
-			/*
-			  Styles for the sidebar
-			*/
-
-			.sidebar {
-				float: left;
-				width: 20%;
-				border-right: 1px solid #ddd;
-				min-height: 200px;
-				padding: 15px;
-			}
-
-			.logo-title {
-
-			}
-
-			span.sub-title {
-				font-size: 20px;
-				font-weight: bold;
-				color: #999;
-			}
-
-			ul {
-
-				padding: 10px;
-				margin: 0;
-			}
-
-			ul.menu {
-				list-style: square outside none;
-				border-bottom: 1px solid #ddd;
-			}
-
-			a {				
-				text-decoration: none;
-				color: #555;
-				display: block;
-				margin-bottom: 10px;
-			}
-
-			ul.menu a {
-				text-transform: uppercase;
-				font-size: 13px;
-				font-weight: bold;
-			}
-
-			ul.menu a:hover {
-				color: blue;
-			}
-
-			/*
-			  Styles for the right side content
-			*/
-
-			.rightside-content {
-				float: right;
-				padding: 10px;
-				width: 73%;
-			}
-
-			h3 {
-				padding-bottom: 15px;
-				border-bottom: 1px solid #ddd;
-			}
-
-			h3.heading {
-				text-transform: uppercase;
-				font-size: 30px;
-				font-weight: bold;
-			}
-
-			.dash-summary {
-				background: url('../images/taxi1.jpg');
-				padding: 10px;
-				color: white;
-				text-shadow: 0px 0px 2px black;
-				font-weight: bold;
-
-			}
-
-			.offers-added {
-				float: left;
-				width: 45%;
-			}			
-
-			.requests-received {
-				float: right;
-				width: 45%;
-			}
-
-			input {
-				display: block;
-				width: 95%;
-				padding: 10px;
-				margin-bottom: 20px;
-			}
-
-			select {
-				width: 100%;
-				padding: 10px;
-				margin-bottom: 20px;
-			}
-
-			button {
-				padding: 10px 30px;
-				background: blue;
-				color: white;
-				border: none;
-				font-size: 15px;
-				cursor: pointer;
-			}
-
-			table, td, th {    
-				border: 1px solid #ddd;
-				text-align: left;
-			}
-
-			table {
-				border-collapse: collapse;
-				width: 100%;
-			}
-
-			th, td {
-				padding: 15px;
-			}
-
-			@media only screen and (max-width: 1100px) {
-				.sidebar {
-					width: 25%;
-				}
-
-				.rightside-content {
-					width: 65%;
-				}
-			}
-
-
-
-			@media only screen and (max-width: 880px){
-				.main {
-					width: 96%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="../css/style.css">
 	</head>
-	<body>
+	<body class="inner-pages">
 		<div class="main">
 			<div class="sidebar">
 				<h3 class="logo-title">Ride-My-Way</h3>
