--- a/UI/index.html
+++ b/UI/index.html
@@ -1,151 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ride My Way - Login</title>
+        <title>Ride My Way - Login</title>
+        
+        <link rel="stylesheet" href="css/style.css">
 
 		<style>
-			body {
-				background: url('images/taxi3.jpg') no-repeat left top, linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,0.3));
-			}
-
-            .clear {
-                clear: both;
-            }
-
-			.main {
-				width:80%;
-				margin: 0px auto;
-				border: 1px solid #ddd;
-				min-height: 600px;
-				border-radius: 2px;
-                position: relative;
-			}
-
-            .header {
-                height: 40px;
-                border-bottom: 1px solid #ddd;
-            }
-
-            .header .logo {
-                float: left;
-                width: 20%;
-            }
-
-            .header .navigation {
-                float: right;
-                width: 75%;
-            }
-
-            .header .navigation ul {
-                padding: 0;
-                margin: 0;
-                list-style: none;
-            }
-
-            .header .navigation ul li.right{
-                text-align: right;
-            }
-
-            .header .navigation ul a{
-                text-decoration: none;
-                float: left;
-                padding: 10px 15px;
-                color: white;
-                font-weight: bold;
-                text-transform: uppercase;
-            }
-
-            .content {
-                padding: 20px;
-                color: white;
-            }
-
-            .content p.contacts {
-                float: right;
-                font-weight: bold;
-            }
-
-            .content p.contacts span.large {
-                display: block;
-                font-size: 30px;
-                text-align: right;
-            }
-
-            .content p.contacts span.small {
-                font-size: 19px;
-            }
-
-            .content p.text {
-                font-size: 20px;
-                text-align: center;
-                width: 80%;
-                margin: 50px auto;
-
-            }
-
-			div.bottom-line {
-				border-bottom: 1px solid #ddd;
-				margin: 15px 0;
-			}
-
-            .footer {
-                text-align: center;
-                position: absolute;
-                bottom: 0;
-                left: 36%;
-                color: #eee;
-                font-weight: bold;
-            } 
-
-            .footer p {
-                text-align: center !important;
-                display: block;
-                text-shadow: 1px 0px #333;
-            }
-
-            @media only screen and (max-width: 820px){
-                .main {
-                    width: 98%;
-                }
-
-                .header .logo {
-                    width: 95%;
-                }
-
-                .header .navigation {
-                    width: 97%;
-                }
-            }
-
-            
-
-            @media only screen and (max-width: 600px){
-                .main {
-                    width: 98%;
-                }
-
-                .header .navigation ul a{
-                    padding: 10px 10px;
-                    font-size: 12px;
-                }
-
-            }
-
-            @media only screen and (max-width: 400px){
-                .main {
-                    width: 98%;
-                }
-
-                .header .navigation ul a{
-                    padding: 10px 7px;
-                    font-size: 11px;
-                }
-
-            }
+			
 		</style>
 
 	</head>
-	<body>
+	<body class="landing-page">
 		<div class="main">
 			<div class="header">
                 <div class="logo">
