--- a/UI/login.html
+++ b/UI/login.html
@@ -3,143 +3,7 @@
 	<head>
 		<title>Ride My Way - Login</title>
 
-		<style>
-			body {
-				background: #eee;
-			}
-
-			.login-main {
-				width:24%;
-				margin: 120px auto;
-				border: 1px solid #ddd;
-				min-height: 100px;
-				padding: 20px;
-				border-radius: 2px;
-				background: #fff;
-			}
-
-			input {
-				display: block;
-				width: 93%;
-				padding: 10px;
-				margin-bottom: 20px;
-			}
-
-			button {
-				padding: 10px 20px;
-				background: blue;
-				color: white;
-				border: none;
-				font-size: 15px;
-				cursor: pointer;
-			}
-
-			div.bottom-line {
-				border-bottom: 1px solid #ddd;
-				margin: 15px 0;
-			}
-
-			@media only screen and (max-width: 1350px) {
-				.login-main {
-					width: 28%;
-				}
-
-				.sidebar {
-					width: 25%;
-				}
-
-				.rightside-content {
-					width: 65%;
-				}
-			}
-
-			
-
-			@media only screen and (max-width: 1150px) {
-				.login-main {
-					width: 40%;
-				}
-
-				.sidebar {
-					width: 25%;
-				}
-
-				.rightside-content {
-					width: 65%;
-				}
-			}
-
-			
-
-			@media only screen and (max-width: 880px){
-				.login-main {
-					width: 50%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 680px){
-				.login-main {
-					width: 67.5%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 480px){
-				.login-main {
-					width: 83%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 400px){
-				.login-main {
-					width: 90%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-
-				button {
-					padding: 8px 15px;
-					background: blue;
-					color: white;
-					border: none;
-					font-size: 15px;
-					cursor: pointer;
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css">
 
 		<script type="text/javascript">
 			function driverLogin () {
