--- a/UI/signup.html
+++ b/UI/signup.html
@@ -3,156 +3,7 @@
 	<head>
 		<title>Ride My Way - Sign up</title>
 
-		<style>
-			body {
-				background: #eee;
-			}
-
-			.signup-main {
-				width:25%;
-				margin: 100px auto;
-				border: 1px solid #ddd;
-				min-height: 100px;
-				padding: 20px;
-				border-radius: 2px;
-				background: #fff;
-			}
-
-			h3 {
-				padding-bottom: 15px;
-				border-bottom: 1px solid #ddd;
-			}
-
-			input {
-				display: block;
-				width: 95%;
-				padding: 10px;
-				margin-bottom: 20px;
-			}
-
-			select {
-				width: 100%;
-				padding: 10px;
-				margin-bottom: 20px;
-			}
-
-			button {
-				padding: 10px 20px;
-				background: blue;
-				color: white;
-				border: none;
-				font-size: 15px;
-				cursor: pointer;
-			}
-
-			div.bottom-line {
-				border-bottom: 1px solid #ddd;
-				margin: 15px 0;
-			}
-
-			
-
-			@media only screen and (max-width: 1350px) {
-				.signup-main {
-					width: 28%;
-				}
-
-				.sidebar {
-					width: 25%;
-				}
-
-				.rightside-content {
-					width: 65%;
-				}
-			}
-
-			
-
-			@media only screen and (max-width: 1150px) {
-				.signup-main {
-					width: 40%;
-				}
-
-				.sidebar {
-					width: 25%;
-				}
-
-				.rightside-content {
-					width: 65%;
-				}
-			}
-
-			
-
-			@media only screen and (max-width: 880px){
-				.signup-main {
-					width: 50%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 680px){
-				.signup-main {
-					width: 67.5%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 480px){
-				.signup-main {
-					width: 83%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-			}
-
-			@media only screen and (max-width: 400px){
-				.signup-main {
-					width: 90%;
-				}
-
-				.sidebar {
-					width: 94%;
-				}
-
-				.rightside-content {
-					width: 94%;
-					border: none;
-				}
-
-				button {
-					padding: 8px 15px;
-					background: blue;
-					color: white;
-					border: none;
-					font-size: 15px;
-					cursor: pointer;
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="signup-main">
