Adding pages and content to the redundant links

--- a/UI/about.html
+++ b/UI/about.html
@@ -10,7 +10,7 @@
 		</style>
 
 	</head>
-	<body class="landing-page home">
+	<body class="landing-page">
 		<div class="main">
 			<div class="header">
                 <div class="logo">
@@ -28,14 +28,16 @@
             </div>
 
             <div class="content">
-                <p class="contacts">
+                <!--<p class="contacts">
                     <span class="phone large">+257 709876543</span>
                     <span class="title large">Ride My Way</span>
                     <span class="slogan small">We take you around with ease</span>
-                </p>
+                </p>-->
                 <div class="clear"></div>
+                <h3>Ride My Way App</h3>
                 <p class="text">
-                        With a fleet of vehicles ranging from sedans for up to four passengers to maxi taxis for up to nine passengers, Ride My Way caters for all your needs. Booking is easy too, with the Ride My Way App. Wheelchair-friendly vehicles available on request.
+                    Ride-my App is a carpooling application that provides drivers with the ability to create ride offers
+and passengers to join available ride offers.
                 </p>
             </div>
 
