--- a/UI/contact.html
+++ b/UI/contact.html
@@ -10,7 +10,7 @@
 		</style>
 
 	</head>
-	<body class="landing-page home">
+	<body class="landing-page">
 		<div class="main">
 			<div class="header">
                 <div class="logo">
@@ -28,15 +28,31 @@
             </div>
 
             <div class="content">
-                <p class="contacts">
+                <!--<p class="contacts">
                     <span class="phone large">+257 709876543</span>
                     <span class="title large">Ride My Way</span>
                     <span class="slogan small">We take you around with ease</span>
-                </p>
+                </p>-->
                 <div class="clear"></div>
-                <p class="text">
-                        With a fleet of vehicles ranging from sedans for up to four passengers to maxi taxis for up to nine passengers, Ride My Way caters for all your needs. Booking is easy too, with the Ride My Way App. Wheelchair-friendly vehicles available on request.
-                </p>
+                <div class="center-50">
+                    <h3>Contact us</h3>
+                    <form action="" method="post">
+                        <label>Name:</label>
+                        <input type="text" placeholder="Enter name" name="name">
+
+                        <label>Email:</label>
+                        <input type="text" placeholder="Enter email" name="email">
+
+                        <label>Subject:</label>
+                        <input type="text" placeholder="Enter subject" name="subject">
+
+                        <label>Message:</label>
+                        <textarea placeholder="Enter message" name="message"></textarea>
+
+                        <button name="submit" type="button">Send message</button>
+                    </form>
+                    <h3></h3>
+                </div>
             </div>
 
             <div class="footer">
